@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow fields_for to be nested inside form_for, so that the name and id get properly constructed [Jamis Buck]
+
 * Allow inGroupsOf and eachSlice to be called through rjs. #7046 [Cody Fauser]
 
 * Allow exempt_from_layout :rhtml.  #6742, #7026 [dcmanges, Squeegy]
